[gd_scene load_steps=3 format=3 uid="uid://cv5liljbq3twx"]

[ext_resource type="Script" path="res://tscn/settings/settings.gd" id="1_1klxu"]
[ext_resource type="FontFile" uid="uid://6e20625007tp" path="res://fonts/Daydream.ttf" id="1_8rjmw"]

[node name="Pause Menu" type="Window"]
auto_translate_mode = 1
title = "WWG SETTINGS"
position = Vector2i(440, 230)
size = Vector2i(400, 259)
always_on_top = true
min_size = Vector2i(400, 259)
theme_override_colors/title_color = Color(0.596078, 0.4, 0.74902, 1)
theme_override_fonts/title_font = ExtResource("1_8rjmw")
theme_override_font_sizes/title_font_size = 12
script = ExtResource("1_1klxu")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -68.5
offset_bottom = 68.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Volume Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Volume"

[node name="Volume Slider" type="HSlider" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.01

[node name="Max Fps Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Max Fps"

[node name="Max Fps Slider" type="HSlider" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
max_value = 500.0

[node name="Mouse Sensitivity Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Mouse Sensitivity Slider" type="HSlider" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
min_value = 0.1
max_value = 20.0
step = 0.01
value = 0.1

[node name="Disconnect Button" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Disconnect"

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/Volume Slider" to="." method="_on_volume_slider_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/Max Fps Slider" to="." method="_on_max_fps_slider_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/Mouse Sensitivity Slider" to="." method="_on_mouse_sensitivity_slider_value_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Disconnect Button" to="." method="_on_disconnect_button_pressed"]
